2014-03-22 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* configure.in, Makefile.in:
	    Revised the pthread support autoconfig to really find where
	    the libraries are, and set correct definitions and compile/link
	    time parameters.

2014-03-21 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, interface.c, beacon.c, config.c, digipeater.c,
	  telemetry.c:
	    Change the "flags are bits in an int" to "packet bit fields"
	    allowing direct setting of flags.

	* aprx.c, beacon.c:
	    Do not use stdout FILE* to print things out of signal handler.
	    Use sprintf(3) to put things into local buffer, then use write(2)
	    to send them to file handle 1.  Otherwise GLIBC has some
	    interlock issue causing a deadlock in rare case. (Happened
	    with debug printouts in development.)

	* beacon.c:
	    Correct close() of exec type beacon file descriptor.

	* interface.c:
	    Correct primary <interface> flags defaults, and setting of
	    "telem-to-is <boolean>" and "telem-t-rf <boolean>" flags.

	* telemetry.c:
	    Debug-printout (debug>1) of telemetry about time until next
	    output, plus packet that is being telemetered along with
	    hex coding of interface flags. Also streamlined the telemetry
	    label output code.

2014-03-11 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* ttyreader.c:
	    Do open /dev/ttySnnn up front in non-blocking mode so that
	    if the serial port hardware needs to be wired specially to
	    be considered active ( = flow control ) the serial port open
	    will not stop -- hang -- at it missing.

	* agwpesocket.c:
	    Update time comparison codes to current model.

	* aprx.c:
	    time_reset gets cleared only after first round through
	    the main loop.

	* beacon.c:
	    The 'file' and 'exec' directives need at most 256 bytes of read
	    buffer to get beacon body content. No need for 2kB buffer alloc.

2014-03-08 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* digipeater.c: